@@ -60,6 +60,7 @@ Changelog
  * Fix: Updated draftjs_exporter to 2.1.5 to fix bug in handling adjacent entities (Thibaud Colas)
  * Fix: Page titles consisting only of stopwords now generate a non-empty default slug (Andy Chosak, Janneke Janssen)
  * Fix: Sitemap generator now allows passing a sitemap instance in the URL configuration (Mitchel Cabuloy, Dan Braghis)
+ * Fix: Increase max length on `Embed.thumbnail_url` to 255 characters (Kevin Howbrook)
 
 
 2.3 LTS (23.10.2018)
